--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -2145,7 +2145,7 @@ footer {
       position: absolute;
       top: 0;
       left: 0;
-      border: 0.2rem solid #eb5763;
+      //border: 0.2rem solid #eb5763;
       height: 100%;
       width: 100%;
       border-radius: 0.3rem;
