--- a/css/cms.css
+++ b/css/cms.css
@@ -2147,7 +2147,6 @@ footer {
       position: absolute;
       top: 0;
       left: 0;
-      border: 0.2rem solid #eb5763;
       height: 100%;
       width: 100%;
       border-radius: 0.3rem;
@@ -3214,48 +3213,6 @@ footer {
     .detail-wrapper .timing-wrapper:nth-child(2),
     .detail-wrapper .pricing-wrapper:nth-child(2) {
       padding-left: 3rem; }
-  .detail-wrapper .accordion .accordion-item {
-    margin: 2rem 0; }
-    .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button {
-      flex-wrap: wrap;
-      background: transparent;
-      border: none; }
-      .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button .divider {
-        margin: 0.5rem 0;
-        transform: rotate(2deg); }
-      .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button .accordion-icon {
-        max-width: 4.5rem; }
-      .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button .accordion-ttl {
-        font-size: 3.3rem; }
-        .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button .accordion-ttl .fa-angle-down {
-          vertical-align: middle;
-          transform: rotate(-180deg);
-          font-size: 2.8rem;
-          transition: all ease-in 0.3s; }
-      .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button::after {
-        display: none; }
-      .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button:focus {
-        box-shadow: none; }
-      .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button.collapsed .accordion-ttl .fa-angle-down {
-        transform: rotate(0deg);
-        transition: all ease-in 0.3s; }
-    .detail-wrapper .accordion .accordion-item .accordion-collapse {
-      border: none; }
-      .detail-wrapper .accordion .accordion-item .accordion-collapse .accordion-body {
-        padding: 1rem 1.25rem 2.5rem; }
-        .detail-wrapper .accordion .accordion-item .accordion-collapse .accordion-body p {
-          font-size: 1.7rem;
-          font-weight: 500;
-          line-height: 1.2; }
-      .detail-wrapper .accordion .accordion-item .accordion-collapse.collapsing {
-        transition: height 0.5s ease; }
-    .detail-wrapper .accordion .accordion-item:first-child .accordion-header .accordion-button .divider {
-      transform: rotate(4.5deg); }
-    .detail-wrapper .accordion .accordion-item:nth-child(odd) {
-      border-right: 0.2rem solid #666;
-      padding-right: 2rem; }
-    .detail-wrapper .accordion .accordion-item:nth-child(even) {
-      padding-left: 2rem; }
   .detail-wrapper .testimonials h4 {
     font-size: 3.3rem;
     margin-bottom: 3rem; }
@@ -3489,12 +3446,6 @@ footer {
         line-height: 1;
         margin-bottom: 2rem;
         font-size: 3.1rem; }
-      .detail-wrapper .accordion .accordion-item {
-        margin: 1rem 0; }
-        .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button .accordion-ttl {
-          font-size: 3.1rem; }
-      .detail-wrapper .space-rule-wrapper h4 {
-        font-size: 3.1rem; }
       .detail-wrapper .activities-wrapper .activities-title {
         font-size: 3.1rem;
         margin-bottom: 0; }
@@ -3534,6 +3485,57 @@ footer {
           font-size: 1.5rem; }
           .detail-wrapper .booking-form-wrapper .booking-form .action-btn .btn.btn-secondary {
             padding: 1rem; } }
+
+@media (max-width: 575.98px) {
+  .accordion .accordion-item {
+    margin: 1rem 0;
+    padding: 0 !important; }
+    .accordion .accordion-item .accordion-header .accordion-button .accordion-ttl {
+      font-size: 3.1rem; } }
+.accordion .space-rule-wrapper h4 {
+  font-size: 3.1rem; }
+.accordion .accordion-item {
+  margin: 2rem 0; }
+  .accordion .accordion-item .accordion-header .accordion-button {
+    flex-wrap: wrap;
+    background: transparent;
+    border: none; }
+    .accordion .accordion-item .accordion-header .accordion-button .divider {
+      margin: 0.5rem 0;
+      transform: rotate(2deg); }
+    .accordion .accordion-item .accordion-header .accordion-button .accordion-icon {
+      max-width: 4.5rem; }
+    .accordion .accordion-item .accordion-header .accordion-button .accordion-ttl {
+      font-size: 3.3rem; }
+      .accordion .accordion-item .accordion-header .accordion-button .accordion-ttl .fa-angle-down {
+        vertical-align: middle;
+        transform: rotate(-180deg);
+        font-size: 2.8rem;
+        transition: all ease-in 0.3s; }
+    .accordion .accordion-item .accordion-header .accordion-button::after {
+      display: none; }
+    .accordion .accordion-item .accordion-header .accordion-button:focus {
+      box-shadow: none; }
+    .accordion .accordion-item .accordion-header .accordion-button.collapsed .accordion-ttl .fa-angle-down {
+      transform: rotate(0deg);
+      transition: all ease-in 0.3s; }
+  .accordion .accordion-item .accordion-collapse {
+    border: none; }
+    .accordion .accordion-item .accordion-collapse .accordion-body {
+      padding: 1rem 1.25rem 2.5rem; }
+      .accordion .accordion-item .accordion-collapse .accordion-body p {
+        font-size: 1.7rem;
+        font-weight: 500;
+        line-height: 1.2; }
+    .accordion .accordion-item .accordion-collapse.collapsing {
+      transition: height 0.5s ease; }
+  .accordion .accordion-item:first-child .accordion-header .accordion-button .divider {
+    transform: rotate(4.5deg); }
+  .accordion .accordion-item:nth-child(odd) {
+    border-right: 0.2rem solid #666;
+    padding-right: 2rem; }
+  .accordion .accordion-item:nth-child(even) {
+    padding-left: 2rem; }
 
 /*detail logged page css end*/
 /*detail not logged page css start*/
@@ -3995,6 +3997,224 @@ footer {
   display: flex;
   align-items: center; }
 
+/*how work page css start*/
+.info-wrapper .user-icon img {
+  max-height: 5rem;
+  margin: auto; }
+
+.info-wrapper .info-ttl {
+  font-size: 4.4rem;
+  text-align: center;
+  line-height: 1.5;
+  margin: auto;
+  margin-top: 1rem;
+  width: 70%; }
+
+.info-wrapper .info-desc {
+  font-size: 1.4rem;
+  text-align: center;
+  width: 54%;
+  margin: auto;
+  line-height: 1.3;
+  font-weight: 500; }
+
+.info-wrapper .divider {
+  width: 25%;
+  margin: 5rem auto;
+  -webkit-transform: rotate(6deg);
+  transform: rotate(6deg); }
+
+.info-wrapper .how-work-accordian {
+  width: 70%;
+  margin: auto; }
+
+.info-wrapper .how-work-accordian .accordion-item {
+  text-align: center;
+  border-right: none; }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-header {
+  width: 70%;
+  margin: auto;
+  display: inline-block; }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-header .accordion-button {
+  background: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border: none; }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-header .accordion-button h5 {
+  font-size: 2.4rem;
+  line-height: 1;
+  margin-right: 1rem; }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-header .accordion-button .down-arrow {
+  max-height: 1.5rem;
+  -webkit-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
+  transform: rotate(-180deg);
+  -webkit-transform: rotate(-180deg); }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-header .accordion-button::after {
+  display: none; }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-header .accordion-button:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none; }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-header .accordion-button.collapsed .down-arrow {
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in; }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-collapse {
+  border: none; }
+
+.info-wrapper .how-work-accordian .accordion-item .accordion-collapse .accordion-body p {
+  font-size: 1.4rem;
+  text-align: center;
+  margin: 0.5rem auto;
+  line-height: 1.3;
+  font-weight: 500;
+  width: 98%; }
+
+@media (max-width: 767.98px) {
+  .info-wrapper .info-bg {
+    width: 100%;
+    height: 15rem;
+    -o-object-fit: cover;
+    object-fit: cover; }
+
+  .info-wrapper .info-ttl {
+    width: 100%;
+    font-size: 3rem; }
+
+  .info-wrapper .info-desc {
+    width: 75%; }
+
+  .info-wrapper .divider {
+    width: 50%;
+    margin: 3rem auto; }
+
+  .info-wrapper .how-work-accordian {
+    width: 100%; }
+
+  .info-wrapper .how-work-accordian .accordion-item .accordion-header {
+    width: 100%; }
+
+  .info-wrapper .how-work-accordian .accordion-item .accordion-header .accordion-button h5 {
+    font-size: 2rem; } }
+@media (max-width: 575.98px) {
+  .info-wrapper .info-desc {
+    width: 90%; } }
+.contactus-wrapper {
+  background-image: url(../images/contact-sec-bg.png);
+  background-size: cover;
+  background-position: center;
+  min-height: 30rem;
+  padding-top: 7rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.contactus-wrapper h2 {
+  font-size: 4.4rem;
+  font-weight: 400;
+  text-align: center;
+  color: #fff;
+  line-height: 1;
+  margin: auto;
+  margin-top: 1rem;
+  width: 70%; }
+
+.contactus-wrapper h2 span {
+  font-size: inherit;
+  color: inherit;
+  font-weight: bold; }
+
+.contactus-wrapper h5 {
+  font-size: 2.4rem;
+  line-height: 1;
+  margin-right: 1rem;
+  text-align: center;
+  color: #fff; }
+
+.contactus-wrapper .space-btn {
+  padding: 3rem 0; }
+
+@media (max-width: 767.98px) {
+  .contactus-wrapper {
+    min-height: 25rem;
+    padding-top: 10rem; }
+
+  .contactus-wrapper h2 {
+    font-size: 3rem; } }
+.how-work-page footer {
+  background-color: #c95258; }
+
+/*how work page css end*/
+/*how does it work page css start*/
+.how-does-it-work .info-desc {
+  font-size: 1.8rem;
+  width: 90%;
+  padding: 1.5rem;
+  font-weight: 400; }
+
+.how-does-it-work .divider-lg {
+  padding: 3rem 0rem; }
+
+.how-does-it-work .divider-lg-small {
+  padding: 0rem; }
+
+.how-does-it-work .how-does-work-details .location-img {
+  width: 4rem;
+  margin: auto; }
+
+.how-does-it-work .how-does-work-details .info-ttl {
+  font-weight: 300;
+  font-size: 3.9rem; }
+
+.how-does-it-work .how-does-work-details .info-desc {
+  font-size: 1.4rem;
+  width: 75%; }
+
+.how-does-it-work .how-does-work-details .space-btn {
+  margin-top: 1rem; }
+
+/*how does it work page css end*/
+/*faq's page css start*/
+.how-does-it-work .faq-details {
+  padding-bottom: 4rem; }
+
+.how-does-it-work .faq-details .location-img {
+  width: 6rem;
+  margin: auto; }
+
+.how-does-it-work .faq-details .info-ttl {
+  font-weight: 300;
+  font-size: 3.9rem; }
+
+.how-does-it-work .faq-details .coupon-img {
+  width: 7rem;
+  padding-top: 5rem; }
+
+.how-does-it-work .faq-details .divider {
+  margin: 1.5rem auto 1rem; }
+
+.how-does-it-work .faq-details .divider-faq {
+  -webkit-transform: rotate(4deg);
+  transform: rotate(4deg); }
+
+.how-does-it-work .faq-details .information-img {
+  width: 3rem;
+  padding-top: 5rem; }
+
+/*faq's page css end*/
 /** theme */
 /*booking page css start*/
 #wpadminbar {
@@ -4070,7 +4290,7 @@ a.drawer-btn {
     .booking-wrapper .booking-table-wrapper {
       padding: 1rem; } }
   .booking-wrapper .booking-table-wrapper .booking-table-section {
-    margin-top: 5rem; }
+    margin-top: 7rem; }
     .booking-wrapper .booking-table-wrapper .booking-table-section .booking-header {
       margin-bottom: 2rem; }
       .booking-wrapper .booking-table-wrapper .booking-table-section .booking-header .booking-ttl {
@@ -4084,6 +4304,8 @@ a.drawer-btn {
       .booking-wrapper .booking-table-wrapper .booking-table-section .booking-header .form-select {
         font-size: 1.4rem;
         color: #4f6675; }
+    .booking-wrapper .booking-table-wrapper .booking-table-section .table-wrapper {
+      overflow: auto; }
     .booking-wrapper .booking-table-wrapper .booking-table-section .booking-table {
       width: 100%;
       min-width: 800px; }
@@ -4472,8 +4694,6 @@ a.drawer-btn {
       padding-left: 3rem;
       padding-top: 22rem;
       padding-bottom: 3rem; }
-      .my-space-page .my-space-wrapper .form-wrapper button {
-        color: #ffffff; }
       .my-space-page .my-space-wrapper .form-wrapper .dimensioni-wrapper {
         margin-top: 3rem; }
         .my-space-page .my-space-wrapper .form-wrapper .dimensioni-wrapper h6 {
@@ -4568,7 +4788,7 @@ a.drawer-btn {
         .my-space-page .my-space-wrapper .my-space-content-wrapper .my-space-content .my-space-desc {
           width: 80%;
           max-width: 100%;
-          color: #999; }
+          color: #5a5a5a; }
       .my-space-page .my-space-wrapper .my-space-content-wrapper::after {
         content: "";
         position: absolute;
@@ -4583,8 +4803,7 @@ a.drawer-btn {
       bottom: 0;
       left: 0;
       width: 100%;
-      z-index: 9;
-      border-top: 1px solid #4f6675; }
+      z-index: 9; }
       .my-space-page .my-space-wrapper .bottom-bar .progress-bar-wrapper .progress-bar {
         padding: 1rem;
         text-align: right; }
