--- a/css/cms.scss
+++ b/css/cms.scss
@@ -114,7 +114,7 @@ a.drawer-btn {
     }
 
     .booking-table-section {
-      margin-top: 5rem;
+      margin-top: 7rem;
 
       .booking-header {
         margin-bottom: 2rem;
@@ -135,6 +135,10 @@ a.drawer-btn {
           font-size: 1.4rem;
           color: #4f6675;
         }
+      }
+
+      .table-wrapper {
+        overflow: auto;
       }
 
       .booking-table {
@@ -756,7 +760,7 @@ a.drawer-btn {
       padding-bottom: 3rem;
 
       button {
-        color: #ffffff;
+        //color: #ffffff;
       }
 
       .dimensioni-wrapper {
@@ -768,7 +772,7 @@ a.drawer-btn {
           font-size: 1.7rem;
           line-height: 1.5;
           font-weight: 500;
-          margin-bottom: 0.5rem;          
+          margin-bottom: 0.5rem;
         }
 
         .form-floating {
@@ -901,7 +905,7 @@ a.drawer-btn {
         .my-space-desc {
           width: 80%;
           max-width: 100%;
-          color: #999;
+          color: #5a5a5a;
         }
       }
 
@@ -923,7 +927,7 @@ a.drawer-btn {
       left: 0;
       width: 100%;
       z-index: 9;
-      border-top: 1px solid #4f6675;
+      //border-top: 1px solid #4f6675;
 
       .progress-bar-wrapper {
         .progress-bar {
