[CSS] checkbox border

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -2136,9 +2136,10 @@ footer {
     margin-top: -3px;
     width: 2rem;
     height: 2rem;
-    border: none;
+    border: 2px solid #0d6efd;
     position: relative;
     margin-right: 1rem;
+    margin-left: 0;
 
     &::after {
       content: "";
@@ -2169,7 +2170,7 @@ footer {
 
   .form-check-label {
     font-size: 1.5rem;
-    margin-left: 1rem;
+    margin-left: 0;
     color: #525252;
   }
 }
