--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -2129,7 +2129,7 @@ footer {
 .form-check {
   display: flex;
   align-items: center;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem 1rem 0;
 
   .form-check-input {
     margin-top: -3px;
