--- a/css/cms.scss
+++ b/css/cms.scss
@@ -822,7 +822,7 @@ a.drawer-btn {
             .form-check {
               display: flex;
               align-items: center;
-              padding: 1rem 1.5rem;
+              //padding: 1rem 1.5rem;
 
               .form-check-label {
                 font-size: 1.4rem;
