--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -2185,10 +2185,33 @@ footer {
   z-index: 1;
   transition: ease-in all 0.3s;
 
-  .gx-5 {
+  .form-floating {
+    margin-bottom: 0;
+  }
+
+  .container {
     --bs-gutter-x: 5rem;
     z-index: 2;
     position: relative;
+    overflow-y: auto;
+    max-height: calc(100vh - 280px);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    &::-webkit-scrollbar {
+      width: 3px;
+  		height: 3px;
+    }
+
+    &::-webkit-scrollbar-track {
+        //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: rgba(0,0,0,0.1);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #eb5763;
+      //outline: 1px solid slategrey;
+    }
   }
 
   .price-wrapper {
@@ -2295,9 +2318,6 @@ footer {
 
   .filter-tiles {
     margin: 4rem 0 0;
-    max-height: 50vh;
-    overflow-y: auto;
-    overflow-x: hidden;
 
     .filter-tile {
       .filter-ttl {
