--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -1562,6 +1562,11 @@ header {
     width: 85%;
     max-height: 4.5rem;
     color: inherit;
+    background: url('/wp-content/themes/mapparte/assets/images/newsletter-btn-bg.svg');
+    border: none;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    font-size: 1.6rem;
 
     p {
       padding: 1.5rem 0;
@@ -1572,6 +1577,13 @@ header {
 
     img {
       max-height: 4.5rem;
+    }
+  }
+
+  .form-check-label {
+
+    a {
+        color: #fff;
     }
   }
 
@@ -2296,12 +2308,11 @@ footer {
     }
 
     .form-select {
-      height: 3.5rem;
       font-size: 1.5rem;
       color: #000;
       border-radius: 0;
-      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
-      width: 60%;
+      border: 0.2rem solid #009aff;
+      line-height: 3rem;
 
       &:focus {
         box-shadow: none;
@@ -2313,6 +2324,7 @@ footer {
       font-size: 1.5rem;
       font-weight: 400;
       margin-right: 1rem;
+      white-space: nowrap;
     }
   }
 
