--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -1567,6 +1567,7 @@ header {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     font-size: 1.6rem;
+    min-height: 100%;
 
     p {
       padding: 1.5rem 0;
@@ -1987,19 +1988,6 @@ footer {
         .icon {
           fill: #ffffff;
         }
-      }
-    }
-
-    .form-select {
-      height: 3.5rem;
-      font-size: 1.5rem;
-      color: #000;
-      border-radius: 0;
-      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
-      width: 60%;
-
-      &:focus {
-        box-shadow: none;
       }
     }
 
@@ -3754,6 +3742,7 @@ footer {
     margin-left: 0 !important;
     color: #009aff;
     font-size: 2.4rem;
+    padding-top: 0 !important;
   }
 }
 
