--- a/css/main.css
+++ b/css/main.css
@@ -1777,7 +1777,8 @@ header {
     border: none;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    font-size: 1.6rem; }
+    font-size: 1.6rem;
+    min-height: 100%; }
     .newsletter-wrapper .read-more p {
       padding: 1.5rem 0;
       color: inherit;
@@ -2040,15 +2041,6 @@ footer {
       transition: ease-in all 0.3s; }
       .search-wrapper .search-panel .more-filter-btn:hover .icon {
         fill: #ffffff; }
-  .search-wrapper .search-panel .form-select {
-    height: 3.5rem;
-    font-size: 1.5rem;
-    color: #000;
-    border-radius: 0;
-    padding: 0.375rem 2.5rem 0.375rem 0.75rem;
-    width: 60%; }
-    .search-wrapper .search-panel .form-select:focus {
-      box-shadow: none; }
   .search-wrapper .search-panel .sort-by-ttl {
     color: #ffffff;
     font-size: 1.5rem;
@@ -3098,7 +3090,8 @@ footer {
     border-left: 0.2rem solid #009aff;
     margin-left: 0 !important;
     color: #009aff;
-    font-size: 2.4rem; }
+    font-size: 2.4rem;
+    padding-top: 0 !important; }
 
 .detail-wrapper {
   padding-bottom: 10rem; }
