--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -941,6 +941,24 @@ header {
   margin-top: 2rem;
   height: Calc(100% - #{$featuredh});
 
+  &.subscribed {
+
+    .featured-img-slider {
+
+      &:before {
+        content: 'sponsorizzata';
+        position: absolute;
+        top: 10px;
+        z-index: 1;
+        padding: 5px 5px 7px;
+        background-color: #00a006;
+        color: #fff;
+        font-size: 14px;
+        box-shadow: 1px 2px 5px rgba(0,0,0,0.4);
+      }
+    }
+  }
+
   .featured-img-slider {
     z-index: 0;
 
@@ -3297,6 +3315,63 @@ footer {
 /*magazine search page css end*/
 
 /*login popup css start*/
+
+.spinner {
+  position: absolute;
+  top: 23%;
+  left: 37%;
+  z-index: 99;
+  display: none;
+}
+
+.spinner img {
+  width: 20%;
+}
+
+.xoo-el-processing {
+  position: relative;
+}
+
+.xoo-el-processing::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+  from {
+    transform: rotate(0turn);
+  }
+  to {
+    transform: rotate(1turn);
+  }
+}
+.search-wrapper .search-panel #activity {
+  width: 100%;
+}
+
+.booking-table-wrapper .contact-wrapper {
+  background-image: none;
+  padding: 0;
+}
+
+.booking-table-wrapper .contact-wrapper .contact-form-wrapper {
+  padding: 1rem 10rem;
+  margin: 1rem auto;
+  width: 100%;
+}
+
+
 #login-popup {
   .modal-dialog {
     max-width: 35rem;
@@ -5742,6 +5817,61 @@ footer {
   }
 }
 
+.plan-list {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
+  @include media767 {
+    justify-content: center;
+  }
+
+  .plan-wrapper {
+    padding: 2rem;
+    background-color: #65889e;
+    transition: all 0.3s ease-in-out;
+    margin: 1rem;
+
+    .plan-ttl {
+      text-align: center;
+      font-weight: 500;
+      color: #fff;
+    }
+
+    .plan-price {
+      text-align: center;
+      font-weight: 500;
+      color: #fff;
+      font-size: 5rem;
+      line-height: 1;
+      margin-top: 5rem;
+
+      span {
+        vertical-align: text-top;
+        color: inherit;
+        font-size: 2rem;
+        line-height: 2;
+
+        &.points {
+          vertical-align: text-bottom;
+          color: inherit;
+          font-size: 3rem;
+          line-height: 1.5;
+        }
+      }
+    }
+
+    .status-note {
+      color: #fff;
+      margin-top: 3rem;
+    }
+
+    &:hover {
+      box-shadow: 0 0 20px 0px #4f6675a6;
+      transition: all 0.5s ease-in-out;
+    }
+  }
+}
+
 .subscription-list-page {
   .new-booking-wrapper {
     .booking-details-section {
@@ -5786,56 +5916,6 @@ footer {
         line-height: 1.5;
         margin-bottom: 1.1rem;
         margin-top: 6rem;
-      }
-
-      .plan-list {
-        margin-top: 5rem;
-        margin-bottom: 5rem;
-
-        .plan-wrapper {
-          padding: 2rem;
-          background-color: #65889e;
-          transition: all 0.3s ease-in-out;
-          margin: 1rem;
-
-          .plan-ttl {
-            text-align: center;
-            font-weight: 500;
-            color: #fff;
-          }
-
-          .plan-price {
-            text-align: center;
-            font-weight: 500;
-            color: #fff;
-            font-size: 5rem;
-            line-height: 1;
-            margin-top: 5rem;
-
-            span {
-              vertical-align: text-top;
-              color: inherit;
-              font-size: 2rem;
-              line-height: 2;
-
-              &.points {
-                vertical-align: text-bottom;
-                color: inherit;
-                font-size: 3rem;
-                line-height: 1.5;
-              }
-            }
-          }
-
-          .status-note {
-            color: #fff;
-          }
-
-          &:hover {
-            box-shadow: 0 0 20px 0px #4f6675a6;
-            transition: all 0.5s ease-in-out;
-          }
-        }
       }
 
       @include media767 {
