--- a/css/main.css
+++ b/css/main.css
@@ -1413,6 +1413,16 @@ header {
   margin: 0 0.5rem;
   margin-top: 2rem;
   height: Calc(100% - 2rem); }
+  .featured-tile.subscribed .featured-img-slider:before {
+    content: 'sponsorizzata';
+    position: absolute;
+    top: 10px;
+    z-index: 1;
+    padding: 5px 5px 7px;
+    background-color: #00a006;
+    color: #fff;
+    font-size: 14px;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.4); }
   .featured-tile .featured-img-slider {
     z-index: 0; }
     .featured-tile .featured-img-slider .owl-nav {
@@ -2788,6 +2798,51 @@ footer {
 
 /*magazine search page css end*/
 /*login popup css start*/
+.spinner {
+  position: absolute;
+  top: 23%;
+  left: 37%;
+  z-index: 99;
+  display: none; }
+
+.spinner img {
+  width: 20%; }
+
+.xoo-el-processing {
+  position: relative; }
+
+.xoo-el-processing::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite; }
+
+@keyframes button-loading-spinner {
+  from {
+    transform: rotate(0turn); }
+  to {
+    transform: rotate(1turn); } }
+.search-wrapper .search-panel #activity {
+  width: 100%; }
+
+.booking-table-wrapper .contact-wrapper {
+  background-image: none;
+  padding: 0; }
+
+.booking-table-wrapper .contact-wrapper .contact-form-wrapper {
+  padding: 1rem 10rem;
+  margin: 1rem auto;
+  width: 100%; }
+
 #login-popup .modal-dialog {
   max-width: 35rem; }
 #login-popup .modal-header {
@@ -4318,6 +4373,45 @@ footer {
   .subscription-detail-page .new-booking-wrapper .booking-details-section .status-wrapper.accepted-status-wrapper ul {
     width: 100%; }
 
+.plan-list {
+  margin-top: 5rem;
+  margin-bottom: 5rem; }
+  @media (max-width: 767.98px) {
+    .plan-list {
+      justify-content: center; } }
+  .plan-list .plan-wrapper {
+    padding: 2rem;
+    background-color: #65889e;
+    transition: all 0.3s ease-in-out;
+    margin: 1rem; }
+    .plan-list .plan-wrapper .plan-ttl {
+      text-align: center;
+      font-weight: 500;
+      color: #fff; }
+    .plan-list .plan-wrapper .plan-price {
+      text-align: center;
+      font-weight: 500;
+      color: #fff;
+      font-size: 5rem;
+      line-height: 1;
+      margin-top: 5rem; }
+      .plan-list .plan-wrapper .plan-price span {
+        vertical-align: text-top;
+        color: inherit;
+        font-size: 2rem;
+        line-height: 2; }
+        .plan-list .plan-wrapper .plan-price span.points {
+          vertical-align: text-bottom;
+          color: inherit;
+          font-size: 3rem;
+          line-height: 1.5; }
+    .plan-list .plan-wrapper .status-note {
+      color: #fff;
+      margin-top: 3rem; }
+    .plan-list .plan-wrapper:hover {
+      box-shadow: 0 0 20px 0px #4f6675a6;
+      transition: all 0.5s ease-in-out; }
+
 .subscription-list-page .new-booking-wrapper .booking-details-section {
   padding-top: 15rem; }
   .subscription-list-page .new-booking-wrapper .booking-details-section .active-plan-ttl {
@@ -4347,40 +4441,6 @@ footer {
     line-height: 1.5;
     margin-bottom: 1.1rem;
     margin-top: 6rem; }
-  .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list {
-    margin-top: 5rem;
-    margin-bottom: 5rem; }
-    .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper {
-      padding: 2rem;
-      background-color: #65889e;
-      transition: all 0.3s ease-in-out;
-      margin: 1rem; }
-      .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .plan-ttl {
-        text-align: center;
-        font-weight: 500;
-        color: #fff; }
-      .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .plan-price {
-        text-align: center;
-        font-weight: 500;
-        color: #fff;
-        font-size: 5rem;
-        line-height: 1;
-        margin-top: 5rem; }
-        .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .plan-price span {
-          vertical-align: text-top;
-          color: inherit;
-          font-size: 2rem;
-          line-height: 2; }
-          .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .plan-price span.points {
-            vertical-align: text-bottom;
-            color: inherit;
-            font-size: 3rem;
-            line-height: 1.5; }
-      .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .status-note {
-        color: #fff; }
-      .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper:hover {
-        box-shadow: 0 0 20px 0px #4f6675a6;
-        transition: all 0.5s ease-in-out; }
   @media (max-width: 767.98px) {
     .subscription-list-page .new-booking-wrapper .booking-details-section .status-wrapper {
       margin: 0; }
